Separate #dashboard_bar from .row class to fix odd spacing and change to %p

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -226,6 +226,7 @@ ul#user_right_panel {
 
 .main_nav_button {
   text-align: center;
+  margin-top: 10px;
 
   h1{
     font-weight:bold;
